--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "doctrine/dbal": "~2.3",
         "fideloper/proxy": "^4.0",
+        "infyomlabs/adminlte-templates": "5.7.x-dev",
+        "infyomlabs/laravel-generator": "5.7.x-dev",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "5.7.0",
+        "laraveles/spanish": "^1.2",
         "spatie/laravel-permission": "^2.37"
     },
     "require-dev": {
