--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "5.7.0",
         "laraveles/spanish": "^1.2",
+        "realrashid/sweet-alert": "^1.1",
         "spatie/laravel-permission": "^2.37"
     },
     "require-dev": {
