--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "doctrine/dbal": "~2.3",
         "fideloper/proxy": "^4.0",
+        "highideas/laravel-users-online": "^3.0",
         "infyomlabs/adminlte-templates": "5.7.x-dev",
         "infyomlabs/laravel-generator": "5.7.x-dev",
         "laravel/framework": "5.7.*",
