--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "highideas/laravel-users-online": "^3.0",
         "infyomlabs/adminlte-templates": "5.7.x-dev",
         "infyomlabs/laravel-generator": "5.7.x-dev",
+        "intervention/image": "^2.5",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "5.7.0",
