--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "5.7.0",
         "laraveles/spanish": "^1.2",
+        "rap2hpoutre/laravel-log-viewer": "^1.3",
         "realrashid/sweet-alert": "^1.1",
         "spatie/laravel-permission": "^2.37"
     },
