--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "laraveles/spanish": "^1.2",
         "rap2hpoutre/laravel-log-viewer": "^1.3",
         "realrashid/sweet-alert": "^1.1",
-        "spatie/laravel-permission": "^2.37"
+        "spatie/laravel-permission": "^2.37",
+        "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
